# catering-ab-test-python

./: EXPERIMENT_SPEC.md  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: experiment_data.csv
outputs/: results_summary.json
src/: __init__.py  ab_test_analysis.py  config.py  data_generator.py  experiment_design.py  visualizations.py
tests/: test_ab_test_analysis.py
