[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "catering-ab-test"
version     = "1.0.0"
description = "A/B test analysis of a promotional campaign on a B2B catering marketplace"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "pandas==2.0.3",
    "numpy==1.24.4",
    "scipy==1.10.1",
    "statsmodels==0.14.1",
    "matplotlib==3.7.5",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pycodestyle==2.11.1",
    "pyflakes==3.2.0",
]

[tool.pytest.ini_options]
testpaths      = ["tests"]
addopts        = "-v --tb=short --ignore=src"
norecursedirs  = ["src", "data", "outputs", ".git", "*.egg"]

[tool.pycodestyle]
max-line-length = 100
ignore = ["E203", "W503"]   # Black-compatible exclusions
